data/derived/sp14/progs/unify/prog1542.ml.out
Characters 208-210:
  | Sigmoid a        -> 1./.(1.- exp (-1*.a))
                             ^^
Error: This expression has type float but an expression was expected of type
         int
